crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP036_2.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 4
    column: 0
  end_location:
    row: 7
    column: 7
  fix:
    edits:
      - location:
          row: 4
          column: 0
        end_location:
          row: 7
          column: 7
        content: 3+6
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 9
    column: 0
  end_location:
    row: 12
    column: 7
  fix:
    edits:
      - location:
          row: 9
          column: 0
        end_location:
          row: 12
          column: 7
        content: 3+6
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 14
    column: 0
  end_location:
    row: 17
    column: 7
  fix:
    edits:
      - location:
          row: 14
          column: 0
        end_location:
          row: 17
          column: 7
        content: 3+6
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 19
    column: 0
  end_location:
    row: 22
    column: 7
  fix:
    edits:
      - location:
          row: 19
          column: 0
        end_location:
          row: 22
          column: 7
        content: 3+6
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 24
    column: 0
  end_location:
    row: 27
    column: 7
  fix:
    edits:
      - location:
          row: 24
          column: 0
        end_location:
          row: 27
          column: 7
        content: 3+6
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 29
    column: 0
  end_location:
    row: 32
    column: 7
  fix:
    edits:
      - location:
          row: 29
          column: 0
        end_location:
          row: 32
          column: 7
        content: 3+6
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 34
    column: 0
  end_location:
    row: 37
    column: 7
  fix:
    edits:
      - location:
          row: 34
          column: 0
        end_location:
          row: 37
          column: 7
        content: 3+6
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 39
    column: 0
  end_location:
    row: 40
    column: 8
  fix:
    edits:
      - location:
          row: 39
          column: 0
        end_location:
          row: 40
          column: 8
        content: pass
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 42
    column: 0
  end_location:
    row: 43
    column: 8
  fix:
    edits:
      - location:
          row: 42
          column: 0
        end_location:
          row: 44
          column: 0
        content: ~
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 46
    column: 4
  end_location:
    row: 47
    column: 12
  fix:
    edits:
      - location:
          row: 46
          column: 4
        end_location:
          row: 47
          column: 12
        content: pass
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 49
    column: 0
  end_location:
    row: 52
    column: 8
  fix:
    edits:
      - location:
          row: 49
          column: 0
        end_location:
          row: 51
          column: 2
        content: ~
  parent: ~
- kind:
    name: OutdatedVersionBlock
    body: Version block is outdated for minimum Python version
    suggestion: Remove outdated version block
    fixable: true
  location:
    row: 54
    column: 0
  end_location:
    row: 57
    column: 8
  fix:
    edits:
      - location:
          row: 54
          column: 0
        end_location:
          row: 57
          column: 8
        content: pass
  parent: ~

