crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP036_5.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
UP036_5.py:3:1: UP036 [*] Version block is outdated for minimum Python version
   |
 3 |   import sys
 4 |   
 5 | / if sys.version_info < (3, 8):
 6 | | 
 7 | |     def a():
 8 | |         if b:
 9 | |             print(1)
10 | |         elif c:
11 | |             print(2)
12 | |         return None
13 | | 
14 | | else:
15 | |     pass
   | |________^ UP036
   |
   = help: Remove outdated version block

ℹ Suggested fix
1  1  | import sys
2  2  | 
3     |-if sys.version_info < (3, 8):
4     |-
5     |-    def a():
6     |-        if b:
7     |-            print(1)
8     |-        elif c:
9     |-            print(2)
10    |-        return None
11    |-
12    |-else:
13    |-    pass
   3  |+pass
14 4  | 
15 5  | 
16 6  | import sys

UP036_5.py:18:1: UP036 [*] Version block is outdated for minimum Python version
   |
18 |   import sys
19 |   
20 | / if sys.version_info < (3, 8):
21 | |     pass
22 | | 
23 | | else:
24 | | 
25 | |     def a():
26 | |         if b:
27 | |             print(1)
28 | |         elif c:
29 | |             print(2)
30 | |         else:
31 | |             print(3)
32 | |         return None
   | |___________________^ UP036
   |
   = help: Remove outdated version block

ℹ Suggested fix
15 15 | 
16 16 | import sys
17 17 | 
18    |-if sys.version_info < (3, 8):
19    |-    pass
20    |-
21    |-else:
22    |-
23    |-    def a():
24    |-        if b:
25    |-            print(1)
26    |-        elif c:
27    |-            print(2)
28    |-        else:
29    |-            print(3)
30    |-        return None
   18 |+def a():
   19 |+    if b:
   20 |+        print(1)
   21 |+    elif c:
   22 |+        print(2)
   23 |+    else:
   24 |+        print(3)
   25 |+    return None


